--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,10 +1,9 @@
-.header {
+.content {
 	height: 55px;
-	width: 100%;
-	background-color: rgba(204, 204, 204, 0.2);
-	border-bottom: 0.1px solid #ccc;
 	display: flex;
 	justify-content: space-between;
+	background-color: rgba(204, 204, 204, 0.2);
+	border-bottom: 0.1px solid #ccc;
 }
 
 .logoContainer {
@@ -50,8 +49,8 @@
 
 .icon {
 	display: block;
-	width: 42px;
-	height: 42px;
+	width: 38px;
+	height: 38px;
 	border-radius: 100%;
 	margin-left: 8px;
 	opacity: .5;
