--- a/src/components/ToolBox/ToolBox.module.css
+++ b/src/components/ToolBox/ToolBox.module.css
@@ -1,9 +1,9 @@
 .container {
 	border-radius: 6px;
 	border: 0.3px solid #eee;
-	box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-	width: 100%;
-	margin: 15px;
+	box-shadow: 0px 10px 15px -10px rgba(0, 0, 0, 0.1);
+	width: 95%;
+	margin-bottom: 10px;
 	border: 1px solid #eee;
 }
 
